# Nexus_BotAI

./: .env.example  .gitignore  Dockerfile  README.md  architecture_spec.md  example.md  main.py  main_test.py  pyproject.toml  requirements.txt
.agent/rules/: russia.md
.github/workflows/: docker-image.yml
app/cogs/: admin.py  ai.py  error_handler.py  general.py  screenshots.py
app/core/: bot.py  checks.py  config.py  embeds.py  handlers.py
app/data/: models.py  request.py  requests.py
app/services/: scheduler.py  steam.py
app/tools/: prompts.py  utils.py
tests/: conftest.py  test.py  test_general.py
