[project]
name = "nexus-bot-ai"
version = "0.1.0"
description = "Universal Discord Bot Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.5.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "greenlet>=3.3.1",
    "psycopg2-binary>=2.9.11",
    "pytz>=2025.2",
    "perplexityai>=0.29.1",
    "requests>=2.32.5",
]

[tool.ruff]
line-length = 101
fix = true

[tool.ruff.lint]
extend-select = ["E501", "UP", "D", "I", "ANN001", "ANN201"]
ignore = ["D100", "D203", "D213"]

[tool.ruff.format]
docstring-code-line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
